# phc-build

./: Makefile.in  README  configure  configure.ac
pkgs/: Makefile.in  version.mk
pkgs/boost/: Makefile
pkgs/gc/: Makefile
pkgs/gcc/: Makefile
pkgs/gmp/: Makefile
pkgs/mpfr/: Makefile
pkgs/phc/: Makefile  optimize.cpp.patch
pkgs/php/: Makefile
rpmbuild/SPEC/: phc.spec
support/: include.mk.in
